syntax = "proto3";

package holms.types.booking;
option csharp_namespace = "HOLMS.Types.Booking";
option go_package = "booking";

enum CancellationFeeCategory {
	PERCENT_OF_STAY = 0;
	DOLLAR_AMOUNT = 1;
	NIGHTS_STAY = 2;
	PERCENT_OF_DEPOSIT = 3;
}
